k8s/base/fastapi-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: my-app
spec:
  selector:
    app: fastapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
